# mordor

./: .clang-format  .clang-tidy  .clangd  .editorconfig  CMakeLists.txt
.github/: copilot-instructions.md
docs/: README.md  contributing-docs.md  overview.md
docs/architecture/: engine-architecture.md  world-scene-structure.md
docs/decisions/: 0000-decision-template.md  0001-logging-library.md  0002-rendering-baseline.md  0003-data-model-strategy.md  0004-windowing-and-context-library.md  0005-scene-spatial-structure.md  0006-camera-occlusion-mouse-picking.md  0007-static-mesh-and-dynamic-scene-nodes.md  0008-visual-occlusion-vs-physical-blocking-layers.md  README.md
docs/execution/: milestone-tracker.md  next-steps.md  phase-backlog.md
docs/plan/: basic-engine-release.md  development-phases.md  rendering-engine-plan.md
docs/quality/: risks-and-mitigations.md  testing-strategy.md
docs/research/: research-tracks.md
scripts/: install-deps-ubuntu.sh
source/: CMakeLists.txt
source/data/maps/: handcrafted_dungeon.map
source/include/mordor/: ability_pipeline.hpp  assert.hpp  components.hpp  fog_of_war.hpp  hearing.hpp  hud_surfaces.hpp  input.hpp  interactions.hpp  inventory_pipeline.hpp  key_switch.hpp  log.hpp  main_loop.hpp  map.hpp  occupancy.hpp  party_commands.hpp  perception_debug.hpp  profiler.hpp  renderer.hpp  scene.hpp  visibility.hpp  world_mesh.hpp
source/src/: ability_pipeline.cpp  components.cpp  fog_of_war.cpp  hearing.cpp  hud_surfaces.cpp  input.cpp  interactions.cpp  inventory_pipeline.cpp  key_switch.cpp  log.cpp  main.cpp  main_loop.cpp  map.cpp  occupancy.cpp  party_commands.cpp  perception_debug.cpp  profiler.cpp  renderer.cpp  scene.cpp  visibility.cpp  world_mesh.cpp
source/tests/: unit_tests.cpp
